apps/base/llama-cpp/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp
  namespace: llama-cpp
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: llama-cpp
  type: ClusterIP
