apps/base/llama-cpp/resources/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: llama-cpp
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: llama-cpp-tls
