apps/base/llama-cpp/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-cpp
  namespace: llama-cpp
spec:
  hostnames:
    - llama.example.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: llama-cpp
          port: 80
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
